fixed android mobile layout bugs.

--- a/lunch-client/styles/pages/home.scss
+++ b/lunch-client/styles/pages/home.scss
@@ -27,6 +27,7 @@
         z-index: 10;
         top: 50%;
         left: 50%;
+        -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         width: 340px;
         color: #fff;
